resources/css/style.css
QWidget {
    background-color: #EAECF0;
    color: #000000;
}


/* ------------------------------------
   The topBar
*/

TopWidget {
    min-height: 48px;
    max-height: 48px;
    margin: 0;
    padding: 5px;
    border: none;
    border-bottom: 1px solid #ccc;
}

TopWidget::separator {
    background: none;
    border: none;
    width: 40px;
}

QToolButton {
    background: none;
    height: 40px;
    width: 40px;
    border: none;
}

SearchBar {
    background-color: white;
    margin: 2px 5px;
    border: 1px solid #ccc;
    border-radius: 3px;

    max-height: 40px;
}

SearchBar > QLabel#searchIcon {
    padding: 0;
    border: none;
    background-color: none;
    margin: 0px 4px 0px 9px;

    max-height: 38px;
    max-width: 38px;
}

SearchBar > SearchBarLineEdit {
    background-color: white;
    margin: 0;
    padding: 0;
    color: #666;
    border: none;
    font-size: 16px;

    max-height: 38px;
}

SearchBar > QToolButton {
    padding: 0;
    border: 0 solid #fff;
    background-color: none;
    max-height: 38px;
    max-width: 38px;
}

SearchBar > BookmarkButton {
    margin-right: 3px;
    margin-left: 3px; 
}

SearchBar > QToolButton:pressed,
SearchBar > QToolButton:hover {
    border: 1px solid #3366CC;
    background-color: #D9E9FF;
    border-radius: 3px;
}

TopWidget QToolButton:pressed,
TopWidget QToolButton::hover {
    border: 1px solid #3366CC;
    background-color: #D9E9FF;
    border-radius: 3px;
}

TopWidget QToolButton::menu-button {
    width: 100%;
    background: rgba(0, 0, 0, 0);
}

TopWidget QToolButton::menu-arrow {
    image: none;
}

TopWidget QToolButton::menu-indicator {
    width: 0; /* it can be hidden at all by setting 0px */
    height: 0;
    subcontrol-origin: padding;
}

TopWidget QToolButton#backButton {
    margin-left: 6px;  /* see also: void WebViewBackMenu::showEvent(QShowEvent *) { geo.setX(geo.x() + 6); } */
}

TopWidget QToolButton#fullScreenButton {
    margin-right: 6px;
}



/* ----------------------------------------
   Menu
*/

QMenu {
    border: none;
    min-width: 320px;
}

QMenu::item {
    min-width: 320px;
    min-height: 40px;
    max-height: 40px;
    border: 1px solid transparent;
    padding: 2px 12px 2px 40px;     /* top right bottom left */
}

QMenu::icon {
    min-width: 40px;
    min-height: 40px;
}

QMenu::item:selected {
    background-color: #D9E9FF;
    border: 1px solid #3366CC;
}


MainMenu::indicator {
    color: #666666;
    width: 13px;
    height: 13px;
}

WebViewForwardMenu::item, WebViewBackMenu::item {
    padding: 2px 12px;
}

WebViewForwardMenu::icon, WebViewBackMenu::icon {
    min-width: 2px;
    min-height: 2px;
}


/* -----------------------------------------
    TabWidget
*/

QTabBar {
    font-size: 16px;
    icon-size: 24px;
    border-bottom: 1px solid #ccc;
}

QTabBar::tear {
     background-color: blue;
}

QTabWidget::pane {
    top: -2px;
    border: none;
    border-top: 1px solid #ccc;
}

QTabBar::tab {
    border: 1px solid #ccc;
    border-radius: 0;
    padding: 2px;
}

QTabBar::tab:selected {
    background-color: white;
    border-bottom: 2px solid white;
}

QTabBar::tab:first {
    padding-top: 6px;
    padding-left: 5px;
}

QTabBar::tab:last QToolButton {
    font-size: 30px;
    width: 30px; min-width: 30px; max-width: 30px;
    height: 30px; min-height:30px; max-height:30px;
    border-radius: 3px;
}

QTabBar::tab:last QToolButton::hover {
    border: 1px solid #3366CC;
    background-color: #D9E9FF;
    border-radius: 3px;
}

/* -----------------------------------------
    TabWidget
*/

#aboutText {
    padding: 20px;
    background-color: white;
}

/* ----------------------------------------
    Find Search page
*/

#FindInPageBar {
    border-top: 1px solid #ccc;
}

#findEdit {
    background-color: white;
    padding: 2px;
    max-height: 36px;
    color: #666;
    font-size: 16px;
    border: 1px solid #ccc;
    border-radius: 0;
}

#fNextButton,
#fPreviousButton,
#hideButton {
    outline: none;
    max-height: 36px;
    max-width: 36px;
    border: 1px solid #ccc;
    border-radius: 0;
}

#fNextButton:pressed,
#fPreviousButton:pressed,
#hideButton:pressed {
    background-color: #D9E9FF;
    border: 1px solid #3366CC;
}

/* ----------------------------------------
    Find Search page
*/

#contentmanagerside QWidget {
   background-color: white;
   outline: none;
}

#contentmanagerside QRadioButton,
#contentmanagerside QCheckBox {
    padding: 10px;
}

#contentmanagerside QRadioButton:checked {
   border: none;
}

#contentmanagerside QRadioButton::indicator {
   image: none;
}

#contentmanagerside QCheckBox::indicator {
   image: none;
}

#contentmanagerside QListWidget {
    border: none;
    padding-left: 30px;
    show-decoration-selected: 0;
}

#contentTypeSelector QCheckBox {
    padding: 0;
}

#categorySelector QScrollBar,
#languageSelector QScrollBar,
#readinglistbar QScrollBar {
    width: 5px;
    border: none;
    outline: none;
}

#categorySelector QScrollBar::handle,
#languageSelector QScrollBar::handle,
#readinglistbar QScrollBar {
    background-color: grey;
}

#categorySelector::item:selected,
#languageSelector::item:selected {
    background-color: white;
    color: black;
    outline: none;
}

#contentTypeAllButton,
ContentTypeFilter {
    spacing: 10;
}

#readinglistbar QLabel {
    font-size: 24px;
    font-weight: bold;
    padding: 5px;
}

#readinglistbar QListWidget {
    show-decoration-selected: 0;
    border: none;
    padding: 5px;
}

#readinglistbar QListWidget::item {
    font-size: 16px;
    margin-bottom: 10px;
}

